--- a/ai.html
+++ b/ai.html
@@ -1,15 +1,7 @@
 <h1>
   指鹿为马
 </h1>
-<ul>
-  An ancient Chinese man
-</ul>
-<ul>
-  dressed in Han clothes
-</ul>
-<ul>  
-pointed at a deer in front of an ancient Chinese emperor and a group of ministers
-</ul> 
-<ul>  
-confidently saying that it was a horse
-</ul>
+<li>An ancient Chinese man</li>
+<li>dressed in Han clothes</li>
+<li>pointed at a deer in front of an ancient Chinese emperor and a group of ministers</li> 
+<li>confidently saying that it was a horse</li>
