--- a/ai.html
+++ b/ai.html
@@ -5,3 +5,4 @@
 <li>dressed in Han clothes</li>
 <li>pointed at a deer in front of an ancient Chinese emperor and a group of ministers</li> 
 <li>confidently saying that it was a horse</li>
+<img src="p.png">
