--- a/ai.html
+++ b/ai.html
@@ -1,8 +1,11 @@
-<h1>
-  指鹿为马
-</h1>
-<li>An ancient Chinese man</li>
-<li>dressed in Han clothes</li>
-<li>pointed at a deer in front of an ancient Chinese emperor and a group of ministers</li> 
-<li>confidently saying that it was a horse</li>
+<html>
+<head><title>我的文生图作品</title></head>
+<body>
+<h1>指鹿为马</h1>
+<ul>
+  <li>An ancient Chinese man</li>
+  <li>dressed in Han clothes</li>
+  <li>pointed at a deer in front of an ancient Chinese emperor and a group of ministers</li> 
+  <li>confidently saying that it was a horse</li>
+</ul>
 <img src="p.png">
