--- a/stop.html
+++ b/stop.html
@@ -1,2 +1,9 @@
-<head>
-</head>
+<html>
+<head><title>不要再看棒子</title></head>
+<body>
+<h1>有钱吗你就看</h1>
+<ul>
+  <li>pj7一巴掌</li>
+  <li>门童更是降龙十八掌</li>
+</ul>
+<img src="m.png">
