--- a/ai.html
+++ b/ai.html
@@ -8,4 +8,5 @@
   <li>pointed at a deer in front of an ancient Chinese emperor and a group of ministers</li> 
   <li>confidently saying that it was a horse</li>
 </ul>
+<audio src=""https://labfile.oss.aliyuncs.com/courses/3781/oeasy.mp3 autoplay="" controls="" style="height: 40px; width: 66%;">
 <img src="p.png">
