--- a/.github/workflows/vr.html
+++ b/.github/workflows/vr.html
@@ -1,3 +1,1 @@
-<video controls src="【这是一个比玉皇大帝更恐怖的笑声-哔哩哔哩】 https://b23.tv/JIYTREw">
-    你的浏览器不支持html5的video标签
-</video>
+<iframe src="//player.bilibili.com/player.html?isOutside=true&aid=900764780&bvid=BV19N4y1N743&cid=1333631075&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
