--- a/.github/workflows/vr.html
+++ b/.github/workflows/vr.html
@@ -1,1 +1,1 @@
-<iframe src="//player.bilibili.com/player.html?isOutside=true&aid=900764780&bvid=BV19N4y1N743&cid=1333631075&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
+<iframe src="//player.bilibili.com/player.html?isOutside=true&aid=113052045346670&bvid=BV12EH7egEdH&cid=25663833537&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
