--- a/vr.html
+++ b/vr.html
@@ -1,1 +1,1 @@
-<iframe src="//player.bilibili.com/player.html?isOutside=true&aid=113052045346670&bvid=BV12EH7egEdH&cid=25663833537&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=2059448492&auto=1&height=66"></iframe>
