--- a/vr.html
+++ b/vr.html
@@ -3,3 +3,4 @@
 <p>before iframe</p>
 <iframe width=330 height=86 src="https://baidu.com"></iframe>
 <p>after iframe</p>
+这是<span style="color: blue;background: red">红底蓝字</span>啊!
