--- a/vr.html
+++ b/vr.html
@@ -4,3 +4,20 @@
 <iframe width=330 height=86 src="https://baidu.com"></iframe>
 <p>after iframe</p>
 这是<span style="color: blue;background: red">红底蓝字</span>啊!
+<!DOCTYPE html>
+<html lang="en-US">
+ <head>
+  <title>唐诗</title>
+  <style>
+   body { color: red; }
+  </style>
+ </head>
+ <body>
+    <h1>悯农</h1>
+    <p>李绅</p>
+    <p>锄禾日当午</p>
+    <p>汗滴禾下土</p>
+    <p>谁知盘中餐</p>
+    <p>粒粒皆辛苦</p>
+ </body>
+</html>
