--- a/harry.html
+++ b/harry.html
@@ -1,1 +1,87 @@
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="一个关于哈利波特的奇幻网页，探索霍格沃茨的魔法秘密">
+    <title>哈利波特的魔法世界</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            background-color: #f5f5f5;
+            color: #333;
+            padding: 20px;
+        }
+        h1, h2, h3 {
+            color: #5a2d82;
+        }
+        .highlight {
+            background-color: #ffffcc;
+        }
+        ul {
+            list-style-type: square;
+            margin: 10px 0;
+            padding-left: 20px;
+        }
+        ol {
+            margin: 10px 0;
+            padding-left: 20px;
+        }
+        .footnote {
+            font-size: 0.9em;
+            color: #666;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>欢迎来到哈利波特的魔法世界</h1>
+        <p>在这里，你将探索霍格沃茨的秘密，了解魔法的奇妙与趣味。</p>
+    </header>
 
+    <main>
+        <section>
+            <h2>霍格沃茨四大学院</h2>
+            <p>霍格沃茨分为四个学院，每个学院都有独特的<mark>价值观</mark>与传统：</p>
+            <ul>
+                <li><strong>格兰芬多</strong>：勇气与决心。</li>
+                <li><em>赫奇帕奇</em>：忠诚与勤奋。</li>
+                <li><b>拉文克劳</b>：智慧与创造。</li>
+                <li><mark>斯莱特林</mark>：雄心与狡黠。</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>魔法世界的术语</h2>
+            <p>以下是一些魔法世界中常见的术语：</p>
+            <ol>
+                <li>
+                    <abbr title="Defense Against the Dark Arts">DADA</abbr>：黑魔法防御术课。
+                </li>
+                <li>
+                    <ruby>魁地奇<rp>(</rp><rt>Quidditch</rt><rp>)</rp></ruby>：魔法世界中最受欢迎的运动。
+                </li>
+                <li>
+                    <mark>复方汤剂</mark><sup>1</sup>：一种允许喝下的人变成另一个人的药水。
+                </li>
+            </ol>
+            <p class="footnote"><sup>1</sup>需获得许可方可使用。</p>
+        </section>
+
+        <section>
+            <h2>趣味小知识</h2>
+            <p>哈利波特系列中的一些有趣细节：</p>
+            <ul>
+                <li>哈利的眼睛被形容为如同他母亲一样的<mark>绿色</mark>，而在电影中是蓝色。</li>
+                <li>霍格沃茨的城堡拥有<strong>142座楼梯</strong>，并且会移动。</li>
+                <li>伏地魔的名字中含有“死亡”一词的<abbr title="法语">法语</abbr>含义（Voldemort 意为“飞过死亡”）。</li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 魔法迷们的贡献。由巫师开发者<sup>&#169;</sup>支持。</p>
+    </footer>
+</body>
+</html>
