--- a/harry.html
+++ b/harry.html
@@ -32,6 +32,25 @@
             font-size: 0.9em;
             color: #666;
         }
+        .gryffindor {
+            color: #b71c1c; /* 红色 */
+        }
+        .hufflepuff {
+            color: #fbc02d; /* 黄色 */
+        }
+        .ravenclaw {
+            color: #1e88e5; /* 蓝色 */
+        }
+        .slytherin {
+            color: #388e3c; /* 绿色 */
+        }
+        .house img {
+            max-width: 100%;
+            height: auto;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
@@ -43,45 +62,35 @@
     <main>
         <section>
             <h2>霍格沃茨四大学院</h2>
-            <p>霍格沃茨分为四个学院，每个学院都有独特的<mark>价值观</mark>与传统：</p>
-            <ul>
-                <li><strong>格兰芬多</strong>：勇气与决心。</li>
-                <li><em>赫奇帕奇</em>：忠诚与勤奋。</li>
-                <li><b>拉文克劳</b>：智慧与创造。</li>
-                <li><mark>斯莱特林</mark>：雄心与狡黠。</li>
-            </ul>
-        </section>
 
-        <section>
-            <h2>魔法世界的术语</h2>
-            <p>以下是一些魔法世界中常见的术语：</p>
-            <ol>
-                <li>
-                    <abbr title="Defense Against the Dark Arts">DADA</abbr>：黑魔法防御术课。
-                </li>
-                <li>
-                    <ruby>魁地奇<rp>(</rp><rt>Quidditch</rt><rp>)</rp></ruby>：魔法世界中最受欢迎的运动。
-                </li>
-                <li>
-                    <mark>复方汤剂</mark><sup>1</sup>：一种允许喝下的人变成另一个人的药水。
-                </li>
-            </ol>
-            <p class="footnote"><sup>1</sup>需获得许可方可使用。</p>
-        </section>
+            <article class="house">
+                <h3 class="gryffindor">格兰芬多</h3>
+                <p>格兰芬多象征着<mark>勇气</mark>与<mark>决心</mark>。适合那些不惧冒险的学生。</p>
+                <img src="IMG_7154.jpg" alt="格兰芬多徽章">
+            </article>
 
-        <section>
-            <h2>趣味小知识</h2>
-            <p>哈利波特系列中的一些有趣细节：</p>
-            <ul>
-                <li>哈利的眼睛被形容为如同他母亲一样的<mark>绿色</mark>，而在电影中是蓝色。</li>
-                <li>霍格沃茨的城堡拥有<strong>142座楼梯</strong>，并且会移动。</li>
-                <li>伏地魔的名字中含有“死亡”一词的<abbr title="法语">法语</abbr>含义（Voldemort 意为“飞过死亡”）。</li>
-            </ul>
+            <article class="house">
+                <h3 class="hufflepuff">赫奇帕奇</h3>
+                <p>赫奇帕奇代表了<mark>忠诚</mark>与<mark>勤奋</mark>，是学院中最友好的成员。</p>
+                <img src="IMG_7157.jpg" alt="赫奇帕奇徽章">
+            </article>
+
+            <article class="house">
+                <h3 class="ravenclaw">拉文克劳</h3>
+                <p>拉文克劳以<mark>智慧</mark>与<mark>创造</mark>为荣，是思想家的摇篮。</p>
+                <img src="IMG_7152.jpg" alt="拉文克劳徽章">
+            </article>
+
+            <article class="house">
+                <h3 class="slytherin">斯莱特林</h3>
+                <p>斯莱特林的核心价值是<mark>雄心</mark>与<mark>狡黠</mark>，适合追求卓越的学生。</p>
+                <img src="IMG_7153.jpg" alt="斯莱特林徽章">
+            </article>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 魔法迷们的贡献。由巫师开发者<sup>&#169;</sup>支持。</p>
+        <p>&copy; 2024 魔法迷们的贡献。由巫师开发者支持。</p>
     </footer>
 </body>
 </html>
