--- a/harry.html
+++ b/harry.html
@@ -23,6 +23,14 @@
             padding: 10px;
             border-radius: 5px;
         }
+        h3 {
+            padding: 5px 10px;
+            border: 2px solid rgba(0, 0, 0, 0.8); /* 深色边框 */
+            background-color: rgba(0, 0, 0, 0.6); /* 深色背景 */
+            color: #fff; /* 白色文字 */
+            display: inline-block;
+            border-radius: 5px; /* 圆角边框 */
+        }
         .highlight {
             background-color: #ffffcc;
         }
