--- a/harry.html
+++ b/harry.html
@@ -14,25 +14,20 @@
             background: url('IMG_7158.jpg') no-repeat center center fixed; /* 替换为实际的图片路径 */
             background-size: cover;
         }
-        h1, h2, h3 {
+        h1, h2 {
             color: #5a2d82;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6); /* 增加标题阴影效果 */
         }
+        h3 {
+            font-size: 1.6em; /* 比正文大两个字号 */
+            color: #333;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5); /* 为学院名字增加阴影效果 */
+        }
         p {
+            font-size: 1em;
             background-color: rgba(255, 255, 255, 0.8); /* 为文字添加半透明背景，提升可读性 */
             padding: 10px;
             border-radius: 5px;
-        }
-        h3 {
-            padding: 5px 10px;
-            border: 2px solid rgba(0, 0, 0, 0.8); /* 深色边框 */
-            background-color: rgba(0, 0, 0, 0.6); /* 深色背景 */
-            color: #fff; /* 白色文字 */
-            display: inline-block;
-            border-radius: 5px; /* 圆角边框 */
-        }
-        .highlight {
-            background-color: #ffffcc;
         }
         ul {
             list-style-type: square;
