--- a/harry.html
+++ b/harry.html
@@ -73,7 +73,7 @@
 </head>
 <body>
     <header>
-        <h1>欢迎来到哈利波特的魔法世界</h1>
+        <h1>欢迎来到哈利·波特的魔法世界</h1>
         <p>在这里，你将探索霍格沃茨的秘密，了解魔法的奇妙与趣味。</p>
     </header>
 
@@ -83,7 +83,7 @@
 
             <article class="house">
                 <h3 class="gryffindor">格兰芬多</h3>
-                <p>格兰芬多象征着<mark>勇气</mark>与<mark>决心</mark>。适合那些不惧冒险的学生。</p>
+                <p>格兰芬多象征着<mark>勇气</mark>与<mark>决心</mark>，适合那些不惧冒险的学生。</p>
                 <img src="IMG_7154.jpg" alt="格兰芬多徽章">
             </article>
 
