--- a/harry.html
+++ b/harry.html
@@ -38,10 +38,6 @@
             margin: 10px 0;
             padding-left: 20px;
         }
-        .footnote {
-            font-size: 0.9em;
-            color: #666;
-        }
         .gryffindor {
             color: #b71c1c; /* 红色 */
         }
@@ -64,16 +60,23 @@
             margin-top: 10px;
             box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.6); /* 增加图片阴影 */
         }
-        .house {
-            text-align: center;
-            margin-bottom: 20px;
+        .representative {
+            margin-top: 10px;
+            font-size: 0.95em;
+            color: #444;
+        }
+        .representative img {
+            width: 50%;
+            max-width: 200px;
+            border-radius: 5px;
+            margin-top: 5px;
         }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet"> <!-- 引入手写风格字体 -->
 </head>
 <body>
     <header>
-        <h1>欢迎来到哈利·波特的魔法世界</h1>
+        <h1>欢迎来到哈利波特的魔法世界</h1>
         <p>在这里，你将探索霍格沃茨的秘密，了解魔法的奇妙与趣味。</p>
     </header>
 
@@ -85,24 +88,40 @@
                 <h3 class="gryffindor">格兰芬多</h3>
                 <p>格兰芬多象征着<mark>勇气</mark>与<mark>决心</mark>，适合那些不惧冒险的学生。</p>
                 <img src="IMG_7154.jpg" alt="格兰芬多徽章">
+                <div class="representative">
+                    <p>代表人物：哈利·波特</p>
+                    <img src="IMG_7161.jpg" alt="哈利·波特">
+                </div>
             </article>
 
             <article class="house">
                 <h3 class="hufflepuff">赫奇帕奇</h3>
                 <p>赫奇帕奇代表了<mark>忠诚</mark>与<mark>勤奋</mark>，是学院中最友好的成员。</p>
                 <img src="IMG_7157.jpg" alt="赫奇帕奇徽章">
+                <div class="representative">
+                    <p>代表人物：塞德里克</p>
+                    <img src="IMG_7163.jpg" alt="塞德里克">
+                </div>
             </article>
 
             <article class="house">
                 <h3 class="ravenclaw">拉文克劳</h3>
                 <p>拉文克劳以<mark>智慧</mark>与<mark>创造</mark>为荣，是思想家的摇篮。</p>
                 <img src="IMG_7152.jpg" alt="拉文克劳徽章">
+                <div class="representative">
+                    <p>代表人物：卢娜</p>
+                    <img src="IMG_7162.jpg" alt="卢娜">
+                </div>
             </article>
 
             <article class="house">
                 <h3 class="slytherin">斯莱特林</h3>
                 <p>斯莱特林的核心价值是<mark>雄心</mark>与<mark>狡黠</mark>，适合追求卓越的学生。</p>
                 <img src="IMG_7153.jpg" alt="斯莱特林徽章">
+                <div class="representative">
+                    <p>代表人物：德拉科·马尔福</p>
+                    <img src="IMG_7159.jpg" alt="德拉科·马尔福">
+                </div>
             </article>
         </section>
     </main>
