--- a/harry.html
+++ b/harry.html
@@ -22,6 +22,7 @@
             font-size: 1.4em; /* 比正文大两个字号 */
             color: #333;
             text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5); /* 为学院名字增加阴影效果 */
+            margin-bottom: 5px; /* 减少与学院介绍的间距 */
         }
         p {
             font-size: 1em;
@@ -63,6 +64,10 @@
             margin-top: 10px;
             font-size: 0.95em;
             color: #444;
+            background-color: rgba(255, 255, 255, 0.8); /* 半透明背景 */
+            padding: 10px;
+            border-radius: 8px;
+            box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5); /* 增加阴影 */
         }
         .representative img {
             width: 50%;
@@ -75,7 +80,7 @@
 </head>
 <body>
     <header>
-        <h1>欢迎来到哈利波特的魔法世界</h1>
+        <h1>欢迎来到哈利·波特的魔法世界</h1>
         <p>在这里，你将探索霍格沃茨的秘密，了解魔法的奇妙与趣味。</p>
     </header>
 
