--- a/harry.html
+++ b/harry.html
@@ -53,8 +53,6 @@
         }
         .representative {
             margin-top: 10px;
-            font-size: 0.95em;
-            color: #444;
             display: flex;
             align-items: center;
         }
@@ -72,6 +70,11 @@
             font-style: italic;
             max-width: 50%;
             text-align: center;
+        }
+        .quote strong {
+            display: block;
+            font-size: 1.1em;
+            margin-bottom: 5px;
         }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
@@ -92,7 +95,10 @@
                 <img src="IMG_7154.jpg" alt="格兰芬多徽章">
                 <div class="representative">
                     <img src="IMG_7161.jpg" alt="哈利·波特">
-                    <p class="quote">“你应该学会赢得别人的尊重。”</p>
+                    <p class="quote">
+                        <strong>哈利波特：</strong>
+                        “你应该学会赢得别人的尊重。”
+                    </p>
                 </div>
             </article>
 
@@ -102,7 +108,10 @@
                 <img src="IMG_7157.jpg" alt="赫奇帕奇徽章">
                 <div class="representative">
                     <img src="IMG_7163.jpg" alt="塞德里克">
-                    <p class="quote">“把我的尸体带回去，好吗？”</p>
+                    <p class="quote">
+                        <strong>塞德里克：</strong>
+                        “把我的尸体带回去，好吗？”
+                    </p>
                 </div>
             </article>
 
@@ -112,7 +121,10 @@
                 <img src="IMG_7152.jpg" alt="拉文克劳徽章">
                 <div class="representative">
                     <img src="IMG_7162.jpg" alt="卢娜">
-                    <p class="quote">“无法估量的智慧是人类最大的财富。”</p>
+                    <p class="quote">
+                        <strong>卢娜：</strong>
+                        “无法估量的智慧是人类最大的财富。”
+                    </p>
                 </div>
             </article>
 
@@ -122,7 +134,10 @@
                 <img src="IMG_7153.jpg" alt="斯莱特林徽章">
                 <div class="representative">
                     <img src="IMG_7159.jpg" alt="德拉科·马尔福">
-                    <p class="quote">“因为我被他选中了，这是我的机会。”</p>
+                    <p class="quote">
+                        <strong>马尔福：</strong>
+                        “因为我被他选中了，这是我的机会。”
+                    </p>
                 </div>
             </article>
         </section>
