--- a/harry.html
+++ b/harry.html
@@ -94,10 +94,11 @@
                 <p>格兰芬多象征着<mark>勇气</mark>与<mark>决心</mark>，适合那些不惧冒险的学生。</p>
                 <img src="IMG_7154.jpg" alt="格兰芬多徽章">
                 <div class="representative">
+                <p>代表人物：哈利·波特</p>
                     <img src="IMG_7161.jpg" alt="哈利·波特">
                     <p class="quote">
                         <strong>哈利波特：</strong>
-                        “你应该学会赢得别人的尊重。”
+                        “ 你应该学会赢得别人的尊重。”
                     </p>
                 </div>
             </article>
@@ -107,10 +108,11 @@
                 <p>赫奇帕奇代表了<mark>忠诚</mark>与<mark>勤奋</mark>，是学院中最友好的成员。</p>
                 <img src="IMG_7157.jpg" alt="赫奇帕奇徽章">
                 <div class="representative">
+                <p>代表人物：塞德里克</p>
                     <img src="IMG_7163.jpg" alt="塞德里克">
                     <p class="quote">
                         <strong>塞德里克：</strong>
-                        “把我的尸体带回去，好吗？”
+                        “ 把我的尸体带回去，好吗？”
                     </p>
                 </div>
             </article>
@@ -120,10 +122,11 @@
                 <p>拉文克劳以<mark>智慧</mark>与<mark>创造</mark>为荣，是思想家的摇篮。</p>
                 <img src="IMG_7152.jpg" alt="拉文克劳徽章">
                 <div class="representative">
+                <p>代表人物：卢娜</p>
                     <img src="IMG_7162.jpg" alt="卢娜">
                     <p class="quote">
                         <strong>卢娜：</strong>
-                        “无法估量的智慧是人类最大的财富。”
+                        “ 无法估量的智慧是人类最大的财富。”
                     </p>
                 </div>
             </article>
@@ -133,10 +136,11 @@
                 <p>斯莱特林的核心价值是<mark>雄心</mark>与<mark>狡黠</mark>，适合追求卓越的学生。</p>
                 <img src="IMG_7153.jpg" alt="斯莱特林徽章">
                 <div class="representative">
+                <p>代表人物：德拉科·马尔福</p>
                     <img src="IMG_7159.jpg" alt="德拉科·马尔福">
                     <p class="quote">
                         <strong>马尔福：</strong>
-                        “因为我被他选中了，这是我的机会。”
+                        ” 因为我被他选中了，这是我的机会。”
                     </p>
                 </div>
             </article>
