--- a/成语.html
+++ b/成语.html
@@ -9,15 +9,20 @@
         h1 { color: #333; }
         ul { list-style-type: none; padding: 0; }
         li { margin-bottom: 10px; }
+        .pinyin { font-size: 0.8em; color: #666; }
     </style>
 </head>
 <body>
-    <h1>孔融让梨 - Kǒng Róng ràng lí</h1>
+    <h1>孔融让梨 <span class="pinyin">Kǒng Róng ràng lí</span></h1>
     <ul>
-        <li>孔融四岁，能让梨。</li>
-        <li>上让兄姊，下让弟妹。</li>
-        <li>父母喜悦，人见人夸。</li>
-        <li>百善孝为先，从小做起。</li>
+        <li>孔融四岁，<span class="pinyin">Kong Rong, a four-year-old boy,</span>能让梨。</li>
+        <li>上让兄姊，<span class="pinyin">dressed in ancient Hanfu,</span>下让弟妹。</li>
+        <li>父母喜悦，<span class="pinyin">stood at a wooden table full of pears.</span>人见人夸。</li>
+        <li>百善孝为先，<span class="pinyin">With a smile on his face and a pear in his hands,</span>从小做起。</li>
+        <li><span class="pinyin">he politely handed it to his elder brother standing next to him.</span></li>
+        <li>兄长，<span class="pinyin">The elder brother, dressed in similar ancient costumes and with a kind face,</span>以赞许的目光回应。</li>
+        <li><span class="pinyin>responded to Kong Rong's actions with approval and pride,</span>并抚摸孔融的头。</li>
+        <li><span class="pinyin">touched Kong Rong's head, 2 boys, disney movie.</span></li>
     </ul>
     <!-- 这里将放置生成的文生图图片 -->
     <img src="梨子.png" alt="孔融让梨文生图">
