--- a/成语.html
+++ b/成语.html
@@ -15,14 +15,10 @@
 <body>
     <h1>孔融让梨 <span class="pinyin">Kǒng Róng ràng lí</span></h1>
     <ul>
-        <li>孔融四岁，<span class="pinyin">Kong Rong, a four-year-old boy,</span>能让梨。</li>
-        <li>上让兄姊，<span class="pinyin">dressed in ancient Hanfu,</span>下让弟妹。</li>
-        <li>父母喜悦，<span class="pinyin">stood at a wooden table full of pears.</span>人见人夸。</li>
-        <li>百善孝为先，<span class="pinyin">With a smile on his face and a pear in his hands,</span>从小做起。</li>
-        <li><span class="pinyin">he politely handed it to his elder brother standing next to him.</span></li>
-        <li>兄长，<span class="pinyin">The elder brother, dressed in similar ancient costumes and with a kind face,</span>以赞许的目光回应。</li>
-        <li><span class="pinyin>responded to Kong Rong's actions with approval and pride,</span>并抚摸孔融的头。</li>
-        <li><span class="pinyin">touched Kong Rong's head, 2 boys, disney movie.</span></li>
+        <li>四岁男孩孔融穿着古代汉服，站在一张摆满梨子的木桌前。</li>
+        <li>他面带微笑，手里拿着一只梨，礼貌地递给站在旁边的哥哥。</li>
+        <li>哥哥身着类似的汉服，面容和善，回应赞许的目光，摸了摸孔融的头。</li>
+        <li>一家人氛围其乐融融。</li>
     </ul>
     <!-- 这里将放置生成的文生图图片 -->
     <img src="梨子.png" alt="孔融让梨文生图">
