--- a/成语.html
+++ b/成语.html
@@ -19,7 +19,7 @@
     <ul>
         <li>四岁男孩孔融穿着古代汉服，站在一张摆满梨子的木桌前。</li>
         <li>他面带微笑，手里拿着一只梨，礼貌地递给站在旁边的哥哥。</li>
-        <li>哥哥身着类似的汉服，面容和善，回应赞许的目光，摸了摸孔融的头。</li>
+        <li>哥哥身着类似的汉服，面容和善，回应赞许的目光。</li>
         <li>一家人氛围其乐融融。</li>
     </ul>
     <!-- 这里将放置生成的文生图图片 -->
