--- a/文生视频.html
+++ b/文生视频.html
@@ -3,16 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>孔融让梨</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        h1 { color: #333; text-align: center; }
+        .keyframe { margin: 20px; text-align: center; }
+        video { width: 100%; max-width: 720px; display: block; margin: 0 auto; }
+    </style>
 </head>
 <body>
     <h1>孔融让梨</h1>
-    <video width="720" height="405" controls>
-        <source src="kongrong-let-pear.mp4" type="video/mp4">
+    <div class="keyframe">
+        <h2>关键帧 1</h2>
+        <p>孔融四岁那年，家中来了客人，带了一篮子梨子作为礼物。</p>
+    </div>
+    <div class="keyframe">
+        <h2>关键帧 2</h2>
+        <p>父亲问孔融该怎么分梨，孔融拿起了一颗大梨给了弟弟。</p>
+    </div>
+    <div class="keyframe">
+        <h2>关键帧 3</h2>
+        <p>接着又拿了一颗大梨给了哥哥，自己拿了一颗最小的梨。</p>
+    </div>
+    <div class="keyframe">
+        <h2>关键帧 4</h2>
+        <p>家人们纷纷点头称赞孔融的谦让，这就是“孔融让梨”的故事。</p>
+    </div>
+    <div class="keyframe">
+        <h2>关键帧 5</h2>
+        <p>镜头拉远，桌上摆了两个梨子。</p>
+    </div>
+    <video controls>
+        <source src="kongrong.mp4" type="video/mp4">
         您的浏览器不支持Video标签。
     </video>
-    <audio controls>
-        <source src="narration-and-music.mp3" type="audio/mpeg">
-        您的浏览器不支持Audio标签。
-    </audio>
 </body>
 </html>
