--- a/文生视频.html
+++ b/文生视频.html
@@ -33,7 +33,7 @@
         <p>镜头拉远，桌上摆了两个梨子。</p>
     </div>
     <video controls>
-        <source src="kongrong.mp4" type="video/mp4">
+        <source src="孔融让梨视频.mov" type="video/mov">
         您的浏览器不支持Video标签。
     </video>
 </body>
