--- a/文生视频.html
+++ b/文生视频.html
@@ -12,18 +12,28 @@
 </head>
 <body>
     <h1>孔融让梨</h1>
-    <!-- 关键帧描述 -->
     <div class="keyframe">
         <h2>关键帧 1</h2>
         <p>孔融四岁那年，家中来了客人，带了一篮子梨子作为礼物。</p>
     </div>
-    <!-- 继续添加其他关键帧描述 -->
-    
-    <!-- 嵌入bilibili视频播放器 -->
-    <div>
-        <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=113592355593456&bvid=BV1AXzRYeEx8&cid=27170504965&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
+    <div class="keyframe">
+        <h2>关键帧 2</h2>
+        <p>父亲问孔融该怎么分梨，孔融拿起了一颗大梨给了弟弟。</p>
     </div>
-    
-    <!-- 继续添加其他内容 -->
+    <div class="keyframe">
+        <h2>关键帧 3</h2>
+        <p>接着又拿了一颗大梨给了哥哥，自己拿了一颗最小的梨。</p>
+    </div>
+    <div class="keyframe">
+        <h2>关键帧 4</h2>
+        <p>家人们纷纷点头称赞孔融的谦让，这就是“孔融让梨”的故事。</p>
+    </div>
+    <div class="keyframe">
+        <h2>关键帧 5</h2>
+        <p>镜头拉远，桌上摆了两个梨子。</p>
+    </div>
+   <div>
+      <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=113592355593456&bvid=BV1AXzRYeEx8&cid=27170504965&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
+    </div>
 </body>
 </html>
