--- a/文生视频.html
+++ b/文生视频.html
@@ -7,7 +7,7 @@
         body { font-family: Arial, sans-serif; }
         h1 { color: #333; text-align: left; font-size: 24px; } /* 调整标题字体大小 */
         .keyframe { margin: 20px; text-align: left; font-size: 16px; } /* 调整关键帧描述字体大小 */
-        iframe { width: 100%; max-width: 720px; display: block; margin: 0 auto; }
+        iframe { width: 80%; height: 80%; max-width: 720px; max-height: 720px; display: block; margin: 0 auto; } /* 调整视频播放器大小 */
     </style>
 </head>
 <body>
@@ -32,8 +32,8 @@
         <h2>关键帧 5</h2>
         <p>镜头拉远，桌上摆了两个梨子。</p>
     </div>
-   <div>
-      <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=113592355593456&bvid=BV1AXzRYeEx8&cid=27170504965&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
+    <div>
+        <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=113592355593456&bvid=BV1AXzRYeEx8&cid=27170504965&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
     </div>
 </body>
 </html>
