--- a/chart.html
+++ b/chart.html
@@ -1,94 +1,138 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>2024年中国人口地图</title>
-    <script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/echarts/map/js/china.js"></script>
+    <title>Scatter Plot with D3.js</title>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <style>
-        #main {
-            width: 100%;
-            height: 600px;
+        .axis {
+            font: 10px sans-serif;
+        }
+        .axis path,
+        .axis line {
+            fill: none;
+            stroke: #000;
+            shape-rendering: crispEdges;
+        }
+        .dot {
+            stroke: #fff;
+            fill: steelblue;
+            opacity: 0.8;
+        }
+        .dot:hover {
+            fill: orange;
+            stroke: #fff;
+        }
+        .tooltip {
+            position: absolute;
+            text-align: center;
+            padding: 8px;
+            background: rgba(0, 0, 0, 0.8);
+            color: white;
+            border-radius: 4px;
+            pointer-events: none;
         }
     </style>
 </head>
 <body>
-    <div id="main"></div>
+    <svg width="500" height="500"></svg>
     <script>
-        // 初始化图表
-        var myChart = echarts.init(document.getElementById('main'));
-
         // 数据
-        var populationData = [
-            {name: '北京', value: 22000000},
-            {name: '天津', value: 15600000},
-            {name: '河北', value: 75000000},
-            {name: '山西', value: 37000000},
-            {name: '内蒙古', value: 24000000},
-            {name: '辽宁', value: 43000000},
-            {name: '吉林', value: 27000000},
-            {name: '黑龙江', value: 31000000},
-            {name: '上海', value: 24000000},
-            {name: '江苏', value: 80000000},
-            {name: '浙江', value: 60000000},
-            {name: '安徽', value: 56000000},
-            {name: '福建', value: 39000000},
-            {name: '江西', value: 45000000},
-            {name: '山东', value: 100000000},
-            {name: '河南', value: 96000000},
-            {name: '湖北', value: 59000000},
-            {name: '湖南', value: 66000000},
-            {name: '广东', value: 113000000},
-            {name: '广西', value: 49000000},
-            {name: '海南', value: 10000000},
-            {name: '重庆', value: 34000000},
-            {name: '四川', value: 83000000},
-            {name: '贵州', value: 36000000},
-            {name: '云南', value: 48000000},
-            {name: '西藏', value: 3500000},
-            {name: '陕西', value: 39000000},
-            {name: '甘肃', value: 26000000},
-            {name: '青海', value: 6000000},
-            {name: '宁夏', value: 7000000},
-            {name: '新疆', value: 25000000},
-            {name: '台湾', value: 23600000} // 添加台湾地区的人口数据
+        const data = [
+            { name: "Alice", math: 85, english: 90 },
+            { name: "Bob", math: 78, english: 82 },
+            { name: "Charlie", math: 92, english: 88 },
+            { name: "David", math: 65, english: 70 },
+            { name: "Eva", math: 88, english: 95 },
+            { name: "Frank", math: 75, english: 80 },
+            { name: "Grace", math: 90, english: 85 },
+            { name: "Hannah", math: 82, english: 90 },
+            { name: "Ivan", math: 80, english: 88 },
+            { name: "Jack", math: 78, english: 85 }
         ];
 
-        // 配置项
-        var option = {
-            title: {
-                text: '2024年中国人口地图',
-                left: 'center'
-            },
-            tooltip: {
-                trigger: 'item',
-                formatter: function (params) {
-                    return params.name + ': ' + params.value + ' 人';
-                }
-            },
-            visualMap: {
-                min: 0,
-                max: 113000000,
-                left: 'left',
-                top: 'bottom',
-                text: ['高', '低'],           // 文本，默认为数值文本
-                calculable: true
-            },
-            series: [
-                {
-                    name: '中国地图',
-                    type: 'map',
-                    mapType: 'china',
-                    roam: true, // 是否开启鼠标缩放和平移漫游
-                    label: {
-                        show: true
-                    },
-                    data: populationData
-                }
-            ]
-        };
+        // 设置图表尺寸
+        const margin = { top: 20, right: 20, bottom: 30, left: 40 };
+        const width = 500 - margin.left - margin.right;
+        const height = 500 - margin.top - margin.bottom;
 
-        // 使用配置项和数据显示图表
-        myChart.setOption(option);
+        // 创建SVG容器
+        const svg = d3.select("svg")
+            .attr("width", width + margin.left + margin.right)
+            .attr("height", height + margin.top + margin.bottom)
+            .append("g")
+            .attr("transform", `translate(${margin.left}, ${margin.top})`);
+
+        // 定义比例尺
+        const xScale = d3.scaleLinear()
+            .domain([60, 100]) // X轴范围为60到100
+            .range([0, width]);
+
+        const yScale = d3.scaleLinear()
+            .domain([60, 100]) // Y轴范围为60到100
+            .range([height, 0]);
+
+        // 添加轴
+        const xAxis = d3.axisBottom(xScale);
+        const yAxis = d3.axisLeft(yScale);
+
+        svg.append("g")
+            .attr("transform", `translate(0, ${height})`)
+            .call(xAxis)
+            .attr("class", "axis");
+
+        svg.append("g")
+            .call(yAxis)
+            .attr("class", "axis");
+
+        // 添加标题
+        svg.append("text")
+            .attr("x", width / 2)
+            .attr("y", height + margin.bottom - 10)
+            .text("Math Score")
+            .style("text-anchor", "middle");
+
+        svg.append("text")
+            .attr("transform", "rotate(-90)")
+            .attr("x", -height / 2)
+            .attr("y", -margin.left + 10)
+            .text("English Score")
+            .style("text-anchor", "middle");
+
+        // 添加散点
+        const dots = svg.selectAll(".dot")
+            .data(data)
+            .enter().append("circle")
+            .attr("class", "dot")
+            .attr("cx", d => xScale(d.math))
+            .attr("cy", d => yScale(d.english))
+            .attr("r", 5)
+            .on("mouseover", function(event, d) {
+                d3.select(this).attr("fill", "orange");
+                tooltip.transition()
+                    .duration(200)
+                    .style("opacity", 0.9);
+                tooltip.html(`${d.name}<br>Math: ${d.math}<br>English: ${d.english}`)
+                    .style("left", (event.pageX + 10) + "px")
+                    .style("top", (event.pageY - 28) + "px");
+            })
+            .on("mouseout", function() {
+                d3.select(this).attr("fill", "steelblue");
+                tooltip.transition()
+                    .duration(200)
+                    .style("opacity", 0);
+            });
+
+        // 添加工具提示
+        const tooltip = d3.select("body").append("div")
+            .attr("class", "tooltip")
+            .style("opacity", 0);
+
+        // 鼠标移动时更新工具提示位置
+        svg.on("mousemove", function(event) {
+            tooltip.style("left", (event.pageX + 10) + "px")
+                .style("top", (event.pageY - 28) + "px");
+        });
     </script>
 </body>
 </html>
+
