--- a/chart.html
+++ b/chart.html
@@ -1,143 +1,66 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Line Chart with D3.js</title>
-    <script src="https://d3js.org/d3.v7.min.js"></script> 
+    <title>江西省人口地图</title>
+    <script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/echarts/map/js/jiangxi.js"></script> <!-- 确保有江西省的地图文件 -->
     <style>
-        .axis {
-            font: 10px sans-serif;
-        }
-        .axis path,
-        .axis line {
-            fill: none;
-            stroke: #000;
-            shape-rendering: crispEdges;
-        }
-        .line {
-            fill: none;
-            stroke: steelblue;
-            stroke-width: 2px;
-        }
-        .tooltip {
-            position: absolute;
-            text-align: center;
-            padding: 8px;
-            background: rgba(0, 0, 0, 0.8);
-            color: white;
-            border-radius: 4px;
-            pointer-events: none;
+        #main {
+            width: 100%;
+            height: 600px;
         }
     </style>
 </head>
 <body>
-    <svg width="500" height="500"></svg>
+    <div id="main"></div>
     <script>
-        // 数据
-        const data = [
-            { name: "Alice", math: 85, english: 90 },
-            { name: "Bob", math: 78, english: 82 },
-            { name: "Charlie", math: 92, english: 88 },
-            { name: "David", math: 65, english: 70 },
-            { name: "Eva", math: 88, english: 95 },
-            { name: "Frank", math: 75, english: 80 },
-            { name: "Grace", math: 90, english: 85 },
-            { name: "Hannah", math: 82, english: 90 },
-            { name: "Ivan", math: 80, english: 88 },
-            { name: "Jack", math: 78, english: 85 }
+        // 初始化图表
+        var myChart = echarts.init(document.getElementById('main'));
+
+        // 江西省下属地区人口数据（示例数据，请替换为实际数据）
+        var populationData = [
+            {name: '南昌市', value: 5000000},
+            {name: '景德镇市', value: 1500000},
+            {name: '萍乡市', value: 1800000},
+            // ... 其他市县的数据
         ];
 
-        // 提取数学和英语成绩
-        const mathScores = data.map(d => d.math);
-        const englishScores = data.map(d => d.english);
+        // 配置项
+        var option = {
+            title: {
+                text: '江西省人口地图',
+                left: 'center'
+            },
+            tooltip: {
+                trigger: 'item',
+                formatter: function (params) {
+                    return params.name + ': ' + params.value + ' 人';
+                }
+            },
+            visualMap: {
+                min: 0,
+                max: 5000000, // 根据实际数据调整最大值
+                left: 'left',
+                top: 'bottom',
+                text: ['高', '低'],           // 文本，默认为数值文本
+                calculable: true
+            },
+            series: [
+                {
+                    name: '江西省地图',
+                    type: 'map',
+                    mapType: 'jiangxi', // 使用江西省地图
+                    roam: true, // 是否开启鼠标缩放和平移漫游
+                    label: {
+                        show: true
+                    },
+                    data: populationData
+                }
+            ]
+        };
 
-        // 设置图表尺寸
-        const margin = { top: 20, right: 20, bottom: 30, left: 40 };
-        const width = 500 - margin.left - margin.right;
-        const height = 500 - margin.top - margin.bottom;
-
-        // 创建SVG容器
-        const svg = d3.select("svg")
-            .attr("width", width + margin.left + margin.right)
-            .attr("height", height + margin.top + margin.bottom)
-            .append("g")
-            .attr("transform", `translate(${margin.left}, ${margin.top})`);
-
-        // 定义比例尺
-        const xScale = d3.scaleLinear()
-            .domain([0, data.length - 1]) // X轴范围为0到数据长度减1
-            .range([0, width]);
-
-        const yScale = d3.scaleLinear()
-            .domain([60, 100]) // Y轴范围为60到100
-            .range([height, 0]);
-
-        // 添加轴
-        const xAxis = d3.axisBottom(xScale);
-        const yAxis = d3.axisLeft(yScale);
-
-        svg.append("g")
-            .attr("transform", `translate(0, ${height})`)
-            .call(xAxis)
-            .attr("class", "axis");
-
-        svg.append("g")
-            .call(yAxis)
-            .attr("class", "axis");
-
-        // 添加标题
-        svg.append("text")
-            .attr("x", width / 2)
-            .attr("y", height + margin.bottom - 10)
-            .text("Student Index")
-            .style("text-anchor", "middle");
-
-        svg.append("text")
-            .attr("transform", "rotate(-90)")
-            .attr("x", -height / 2)
-            .attr("y", -margin.left + 10)
-            .text("Score")
-            .style("text-anchor", "middle");
-
-        // 添加折线
-        const line = d3.line()
-            .x(d => xScale(d.index))
-            .y(d => yScale(d.score));
-
-        const lineData = data.map((d, i) => ({ index: i, score: d.math }));
-
-        svg.append("path")
-            .datum(lineData)
-            .attr("class", "line")
-            .attr("d", line);
-
-        // 添加数据点
-        const dots = svg.selectAll(".dot")
-            .data(lineData)
-            .enter().append("circle")
-            .attr("class", "dot")
-            .attr("cx", d => xScale(d.index))
-            .attr("cy", d => yScale(d.score))
-            .attr("r", 3);
-
-        // 添加工具提示
-        const tooltip = d3.select("body").append("div")
-            .attr("class", "tooltip")
-            .style("opacity", 0);
-
-        // 鼠标移动时更新工具提示位置和内容
-        dots.on("mouseover", function(event, d) {
-            tooltip.transition()
-                .duration(200)
-                .style("opacity", 0.9);
-            tooltip.html(`${data[d.index].name}<br>Math: ${data[d.index].math}`)
-                .style("left", (event.pageX + 10) + "px")
-                .style("top", (event.pageY - 28) + "px");
-        })
-        .on("mouseout", function() {
-            tooltip.transition()
-                .duration(200)
-                .style("opacity", 0);
-        });
+        // 使用配置项和数据显示图表
+        myChart.setOption(option);
     </script>
 </body>
 </html>
