--- a/voices.html
+++ b/voices.html
@@ -7,17 +7,85 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            margin: 0;
+            padding: 20px;
+            background: url('群封.jpg') no-repeat center center/cover;
+            color: #fff;
+            text-align: center;
         }
         h1 {
-            font-size: 30px;
-            color: #333;
+            font-size: 36px;
+            font-weight: bold;
+            color: #fff;
+            margin-bottom: 10px;
+        }
+        .intro {
+            background: rgba(200, 200, 200, 0.3); /* 浅灰色半透明背景 */
+            padding: 15px;
+            border-radius: 10px;
+            font-size: 18px;
+            max-width: 800px;
+            margin: 0 auto 30px auto;
+            line-height: 1.6;
+        }
+        .image-gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin-bottom: 30px;
+        }
+        .image-gallery img {
+            width: 200px;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+        }
+        video {
+            width: 80%;
+            max-width: 800px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+        }
+        .back-link {
+            display: inline-block;
+            margin-top: 20px;
+            font-size: 18px;
+            color: #ff4081;
+            text-decoration: none;
+            font-weight: bold;
+            border: 2px solid #ff4081;
+            padding: 10px 20px;
+            border-radius: 30px;
+            transition: all 0.3s ease;
+        }
+        .back-link:hover {
+            background-color: #ff4081;
+            color: #fff;
         }
     </style>
 </head>
 <body>
     <h1>脱口秀女演员群封</h1>
-    <p>这里可以展示相关的内容，比如事件分析、女演员的声音、社会影响等。</p>
-    <a href="index.html">返回首页</a>
+    
+    <div class="intro">
+        《T》中文版 2025 年 1 月特别策划了“脱口秀女演员群封”，当春天来临时。
+    </div>
+
+    <div class="image-gallery">
+        <img src="小鹿.jpg" alt="小鹿">
+        <img src="鸟鸟.jpg" alt="鸟鸟">
+        <img src="唐香玉.jpg" alt="唐香玉">
+        <img src="颜怡颜悦.jpg" alt="颜怡颜悦">
+        <img src="Echo.jpg" alt="Echo">
+    </div>
+
+    <video controls>
+        <source src="ask.mov" type="video/mp4">
+        您的浏览器不支持视频播放。
+    </video>
+
+    <br>
+    <a href="index.html" class="back-link">返回首页</a>
 </body>
 </html>
