--- a/voices.html
+++ b/voices.html
@@ -17,16 +17,16 @@
             font-size: 36px;
             font-weight: bold;
             color: #fff;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
         }
         .intro {
             background: rgba(200, 200, 200, 0.3); /* 浅灰色半透明背景 */
-            padding: 15px;
+            padding: 20px;
             border-radius: 10px;
             font-size: 18px;
             max-width: 800px;
-            margin: 0 auto 30px auto;
-            line-height: 1.6;
+            margin: 0 auto 40px auto;
+            line-height: 1.8;
         }
         .image-gallery {
             display: flex;
@@ -36,16 +36,17 @@
             margin-bottom: 30px;
         }
         .image-gallery img {
-            width: 200px;
+            width: 180px;
             height: auto;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
         }
         video {
-            width: 80%;
-            max-width: 800px;
+            width: 40%;
+            max-width: 400px;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+            margin-bottom: 30px;
         }
         .back-link {
             display: inline-block;
@@ -73,11 +74,11 @@
     </div>
 
     <div class="image-gallery">
-        <img src="小鹿.jpg" alt="小鹿">
-        <img src="鸟鸟.jpg" alt="鸟鸟">
-        <img src="唐香玉.jpg" alt="唐香玉">
-        <img src="颜怡颜悦.jpg" alt="颜怡颜悦">
-        <img src="Echo.jpg" alt="Echo">
+        <img src="小鹿.png" alt="小鹿">
+        <img src="鸟鸟.png" alt="鸟鸟">
+        <img src="唐香玉.png" alt="唐香玉">
+        <img src="颜怡颜悦.png" alt="颜怡颜悦">
+        <img src="Echo.png" alt="Echo">
     </div>
 
     <video controls>
