--- a/voices.html
+++ b/voices.html
@@ -42,8 +42,8 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
         }
         video {
-            width: 40%;
-            max-width: 400px;
+            width: 400px;
+            height: 300px;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
             margin-bottom: 30px;
@@ -87,6 +87,6 @@
     </video>
 
     <br>
-    <a href="index.html" class="back-link">返回首页</a>
+    <a href="talkshow.html" class="back-link">返回首页</a>
 </body>
 </html>
