--- a/voices.html
+++ b/voices.html
@@ -74,7 +74,7 @@
     </div>
 
     <div class="image-gallery">
-        <img src="小鹿.jpg" alt="小鹿">
+        <img src="小鹿.png" alt="小鹿">
         <img src="鸟鸟.png" alt="鸟鸟">
         <img src="唐香玉.png" alt="唐香玉">
         <img src="颜怡颜悦.png" alt="颜怡颜悦">
