--- a/talkshow.html
+++ b/talkshow.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             padding: 0;
-            background: url('background.jpg') no-repeat center center/cover;
+            background: url('底图.jpg') no-repeat center center/cover;
             height: 100vh;
             display: flex;
             align-items: center;
