--- a/voices.html
+++ b/voices.html
@@ -42,27 +42,29 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
         }
         video {
-            width: 300px;
-            height: 400px;
+            width: 400px;
+            height: 300px;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
             margin-bottom: 30px;
         }
-        .back-link {
+        .btn {
             display: inline-block;
             margin-top: 20px;
-            font-size: 18px;
-            color: #ff4081;
-            text-decoration: none;
+            font-size: 20px;
             font-weight: bold;
-            border: 2px solid #ff4081;
-            padding: 10px 20px;
+            color: #fff;
+            background-color: #ff4081; /* 玫红色背景 */
+            padding: 15px 40px;
+            border: 2px solid #ff4081; /* 玫红色边框 */
             border-radius: 30px;
+            text-decoration: none;
             transition: all 0.3s ease;
         }
-        .back-link:hover {
-            background-color: #ff4081;
-            color: #fff;
+        .btn:hover {
+            background-color: #e91e63;
+            border-color: #e91e63;
+            box-shadow: 0 0 10px rgba(255, 64, 129, 0.8);
         }
     </style>
 </head>
