--- a/talkshow.html
+++ b/talkshow.html
@@ -27,7 +27,7 @@
             font-size: 70px;  /* 字号放大 */
             font-weight: bold;
             letter-spacing: 8px;  /* 增加字间距 */
-            color: #EBD303;  /* 暖黄色字体 */
+            color: #F1BBC9;  /* 芭蕾粉 */
             padding: 20px 50px;
             border: 2px solid rgba(255, 255, 255, 0.3);  /* 透明边框 */
             border-radius: 10px;
