--- a/talkshow.html
+++ b/talkshow.html
@@ -43,11 +43,12 @@
         h1 {
             font-family: 'Dancing Script', cursive;
             font-size: 75px;  /* 增大字号 */
-            font-weight: bold;
+            font-weight: 900;  /* 加粗效果 */
             letter-spacing: 10px;  /* 增加字间距 */
             color: #F1BBC9;  /* 芭蕾粉 */
             padding: 20px 50px;
-            text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);  /* 添加更强的阴影 */
+            background: rgba(255, 255, 255, 0.1); /* 轻微透明背景，增加层次感 */
+            border-radius: 10px;
         }
 
         .btn {
