--- a/voices.html
+++ b/voices.html
@@ -76,11 +76,11 @@
     </div>
 
     <div class="image-gallery">
-        <img src="小鹿.png" alt="小鹿">
-        <img src="鸟鸟.png" alt="鸟鸟">
-        <img src="唐香玉.png" alt="唐香玉">
-        <img src="颜怡颜悦.png" alt="颜怡颜悦">
-        <img src="Echo.png" alt="Echo">
+        <img src="小鹿.jpg" alt="小鹿">
+        <img src="鸟鸟.jpg" alt="鸟鸟">
+        <img src="唐香玉.jpg" alt="唐香玉">
+        <img src="颜怡颜悦.jpg" alt="颜怡颜悦">
+        <img src="Echo.jpg" alt="Echo">
     </div>
 
     <video controls>
